[gd_scene format=3 uid="uid://dvvt4w2yisrts"]

[ext_resource type="Script" uid="uid://xiw65vp3v28v" path="res://script/table.gd" id="1_7w2ib"]
[ext_resource type="PackedScene" uid="uid://cb0on76tdbam5" path="res://node/card.tscn" id="2_brvwj"]
[ext_resource type="Texture2D" uid="uid://ce2wl3s4gvjwj" path="res://assets/table.png" id="2_mthqe"]
[ext_resource type="PackedScene" uid="uid://dshim37dpnki" path="res://node/Stamp.tscn" id="7_6rkjd"]
[ext_resource type="Script" uid="uid://j2bltq1pds3x" path="res://fumiga.gd" id="8_qjd42"]
[ext_resource type="Texture2D" uid="uid://c18tbhs1q1f36" path="res://assets/formiga.png" id="9_brvwj"]
[ext_resource type="PackedScene" uid="uid://bsvmq3ogivp7m" path="res://node/funcs/hud_coin.tscn" id="9_qjd42"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e76hu"]
size = Vector2(657, 477)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7w2ib"]
size = Vector2(784, 419)

[node name="Table" type="Node2D" unique_id=1511156028]
script = ExtResource("1_7w2ib")
card_scene = ExtResource("2_brvwj")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1497459559]
position = Vector2(576, 324)
scale = Vector2(0.59999996, 0.6000001)
texture = ExtResource("2_mthqe")

[node name="accept" type="Area2D" parent="." unique_id=578764493]

[node name="CollisionShape2D" type="CollisionShape2D" parent="accept" unique_id=1061130770]
position = Vector2(941.5, 129.5)
shape = SubResource("RectangleShape2D_e76hu")

[node name="confiscate" type="Area2D" parent="." unique_id=1006347816]

[node name="CollisionShape2D" type="CollisionShape2D" parent="confiscate" unique_id=19972230]
position = Vector2(245, 632.5)
shape = SubResource("RectangleShape2D_7w2ib")

[node name="Stamp" parent="." unique_id=1663195992 instance=ExtResource("7_6rkjd")]
position = Vector2(684, 422)

[node name="Fumiga" type="Node2D" parent="." unique_id=1884845610]

[node name="Sprite2D" type="Sprite2D" parent="Fumiga" unique_id=1912067527]
position = Vector2(-24.000006, -60.000004)
scale = Vector2(0.55, 0.55)
texture = ExtResource("9_brvwj")
script = ExtResource("8_qjd42")

[node name="Hud" parent="." unique_id=1077457220 instance=ExtResource("9_qjd42")]
z_index = 100

[connection signal="body_shape_exited" from="accept" to="." method="_on_accept_body_shape_exited"]
[connection signal="input_event" from="accept" to="." method="_on_accept_input_event"]
[connection signal="mouse_entered" from="accept" to="." method="_on_accept_mouse_entered"]
[connection signal="body_shape_exited" from="confiscate" to="." method="_on_confiscate_body_shape_exited"]
[connection signal="input_event" from="confiscate" to="." method="_on_confiscate_input_event"]
[connection signal="mouse_entered" from="confiscate" to="." method="_on_confiscate_mouse_entered"]
